# lottery-dapp

./: Anchor.toml  Makefile  package-lock.json  package.json  tsconfig.json
app/: index.ts  lottery_dapp.json  lottery_dapp.ts
asssets/: metadata.json
programs/lottery-dapp/: Cargo.toml
programs/lottery-dapp/src/: lib.rs
tests/: lottery-dapp.spec.ts
